
                              KijiREST Release Notes

Version 1.0.0
  * REST-60. Removes the entityId endpoint of tables.
  * REST-50. Check that the table still exists before returning it in 
      ManagedKijiClient.
  * REST-59. Ensure that if the writer_schema is JSON, that the server will
     accept the schema and parse it properly.

Version 0.6.0
  * REST-55. Remove an old servlet dependency. Also change the release artifact
     to not contain a single fat jar but house the runtime dependencies in the
     lib/ directory.
  * REST-54. Supports per-request freshening parameters.
  * REST-53. Remove the row endpoint. Can be accessed by /rows?eid=.
  * REST-32. Supports scanning with partially specified entity ids.
  * REST-49. Adds freshening/scoring parameter to KijiREST.

Version 0.5.0
  * REST-44. Remove the rowkey element from the output of the row.
  * REST-45. Output the writer schema_id on GET. Force the specification of the
      writer schema (either id or JSON) on POST to ensure that data specified can
      be written without throwing exceptions because of data being written
      according to the wrong writer schema.

Version 0.4.0
  * REST-40. Bugfix: Fix the issue where /instances/<instance> threw a
      500 error. This was due to an issue in converting Avro to JSON using
      the generic writer. Specific writers are now used when serializing a
      specific record.

Version 0.3.0
  * REST-21. Implements batch POST.
  * REST-33. Bugfix: instances/<instance>/ throws an error retrieving metadata.
  * REST-23. Expose methods to read and write REST row models.
  * REST-12. Emit JSON that is properly navigable instead of a list of cells.
  * REST-8. Allow for the installation of custom HBase configuration via either
      $BASEDIR/conf or the KIJI_REST_CONF_DIR environment variable.

Version 0.2.0
  * REST-20. Update KijiREST to depend on KijiSchema v1.1.0.
  * REST-10. Ensure that the /rows resource streams properly in all cases.